--- a/Interpretable ML.ipynb
+++ b/Interpretable ML.ipynb
@@ -6,7 +6,7 @@
         "id": "nw5uQnGcBeak"
       },
       "source": [
-        "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/jessc0202/AIPI-590---XAI-Assignment-1/blob/main/mechanistic_interp_starter.ipynb)\n",
+        "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/jessc0202/AIPI-590---XAI-Assignment-1/blob/main/Interpretable%20ML.ipynb)\n",
         "\n",
         "# AIPI 590 - XAI | Interpretable ML Assignment\n",
         "# Sizhe Chen\n",
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 36,
       "metadata": {
         "id": "ho3hsFc0CLYv"
       },
@@ -26,6 +26,27 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "import warnings\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
+        "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+        "from sklearn.metrics import (\n",
+        "    mean_squared_error,\n",
+        "    r2_score,\n",
+        "    accuracy_score,\n",
+        "    classification_report,\n",
+        "    confusion_matrix,\n",
+        "    roc_auc_score,\n",
+        "    roc_curve,\n",
+        "    brier_score_loss,\n",
+        "    precision_recall_curve,\n",
+        "    average_precision_score,\n",
+        ")\n",
+        "from scipy import stats\n",
+        "import statsmodels.api as sm\n",
+        "from statsmodels.stats.diagnostic import het_breuschpagan\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from pygam import LogisticGAM, s, l\n",
+        "from functools import reduce\n",
         "\n",
         "warnings.filterwarnings(\"ignore\")"
       ]
@@ -421,30 +442,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
-        "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
-        "from sklearn.metrics import (\n",
-        "    mean_squared_error,\n",
-        "    r2_score,\n",
-        "    accuracy_score,\n",
-        "    classification_report,\n",
-        "    confusion_matrix,\n",
-        "    roc_auc_score,\n",
-        "    roc_curve,\n",
-        "    brier_score_loss,\n",
-        ")\n",
-        "from scipy import stats\n",
-        "import statsmodels.api as sm\n",
-        "from statsmodels.stats.diagnostic import het_breuschpagan"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -813,27 +810,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from sklearn.pipeline import Pipeline\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import (\n",
-        "    accuracy_score,\n",
-        "    roc_auc_score,\n",
-        "    roc_curve,\n",
-        "    precision_recall_curve,\n",
-        "    average_precision_score,\n",
-        "    confusion_matrix,\n",
-        "    classification_report,\n",
-        "    brier_score_loss,\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 22,
       "metadata": {},
       "outputs": [
@@ -1042,16 +1018,6 @@
       "metadata": {},
       "source": [
         "### GENERALIZED ADDITIVE MODEL (GAM)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 26,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from pygam import LogisticGAM, s, l\n",
-        "from functools import reduce"
       ]
     },
     {
